--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-connect": "^0.8.0",
     "assemble": "^0.4.39",
-    "grunt-autoprefixer": "^0.7.6",
+    "grunt-autoprefixer": "^0.8.0",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-jshint": "^0.10.0",
@@ -24,6 +24,8 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-newer": "^0.7.0",
     "grunt-notify": "^0.3.0",
-    "grunt-contrib-requirejs": "^0.4.4"
+    "grunt-contrib-requirejs": "^0.4.4",
+    "grunt-gh-pages": "^0.9.1",
+    "grunt-contrib-htmlmin": "^0.3.0"
   }
 }
