--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-connect": "^0.8.0",
     "assemble": "^0.4.39",
-    "grunt-autoprefixer": "^0.8.0",
+    "grunt-autoprefixer": "^0.8.1",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-jshint": "^0.10.0",
@@ -26,6 +26,9 @@
     "grunt-notify": "^0.3.0",
     "grunt-contrib-requirejs": "^0.4.4",
     "grunt-gh-pages": "^0.9.1",
-    "grunt-contrib-htmlmin": "^0.3.0"
+    "grunt-contrib-htmlmin": "^0.3.0",
+    "jshint-stylish": "^0.2.0",
+    "grunt-usemin": "^2.3.0",
+    "matchdep": "^0.3.0"
   }
 }
