--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "grunt-contrib-htmlmin": "^0.3.0",
     "jshint-stylish": "^0.2.0",
     "grunt-usemin": "^2.3.0",
-    "matchdep": "^0.3.0"
+    "matchdep": "^0.3.0",
+    "grunt-contrib-concat": "^0.4.0",
+    "grunt-contrib-cssmin": "^0.10.0",
+    "grunt-contrib-uglify": "^0.5.0",
+    "grunt-filerev": "^0.2.1"
   }
 }
