--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-newer": "^0.7.0",
     "grunt-notify": "^0.3.0",
-    "grunt-contrib-requirejs": "^0.4.4",
     "grunt-gh-pages": "^0.9.1",
     "grunt-contrib-htmlmin": "^0.3.0",
     "jshint-stylish": "^0.2.0",
@@ -33,6 +32,7 @@
     "grunt-contrib-concat": "^0.4.0",
     "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-uglify": "^0.5.0",
-    "grunt-filerev": "^0.2.1"
+    "grunt-filerev": "^0.2.1",
+    "grunt-sails-linker": "^0.9.5"
   }
 }
