--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-uglify": "^0.5.0",
     "grunt-filerev": "^0.2.1",
-    "grunt-sails-linker": "^0.9.5"
+    "grunt-sails-linker": "^0.9.5",
+    "es6ify": "~1.2.0",
+    "browserify": "~4.2.0",
+    "browserify-shim": "~3.6.0",
+    "watchify": "~0.10.2"
   }
 }
