--- a/package.json
+++ b/package.json
@@ -7,11 +7,23 @@
     "url": "https://github.com/MasDennis/masdennis.github.com.git"
   },
   "author": "The Rajawali3D contributors",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/MasDennis/masdennis.github.com/issues"
-  },
-  "homepage": "https://github.com/MasDennis/masdennis.github.com",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/MasDennis/masdennis.github.com/issues"
+    },
+    "homepage": "https://github.com/MasDennis/masdennis.github.com",
+
+    "browser": {
+        "jquery": "./src/js/vendor/jquery-2.1.1.min.js"
+    },
+    "browserify-shim": {
+
+    },
+    "browserify": {
+        "transform": [
+            "browserify-shim"
+        ]
+    },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-connect": "^0.8.0",
@@ -33,10 +45,10 @@
     "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-uglify": "^0.5.0",
     "grunt-filerev": "^0.2.1",
-    "grunt-sails-linker": "^0.9.5",
     "es6ify": "~1.2.0",
     "browserify": "~4.2.0",
     "browserify-shim": "~3.6.0",
-    "watchify": "~0.10.2"
+    "watchify": "~0.10.2",
+    "grunt-browserify": "~2.1.3"
   }
 }
