--- a/package.json
+++ b/package.json
@@ -7,23 +7,20 @@
     "url": "https://github.com/MasDennis/masdennis.github.com.git"
   },
   "author": "The Rajawali3D contributors",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/MasDennis/masdennis.github.com/issues"
-    },
-    "homepage": "https://github.com/MasDennis/masdennis.github.com",
-
-    "browser": {
-        "jquery": "./src/js/vendor/jquery-2.1.1.min.js"
-    },
-    "browserify-shim": {
-
-    },
-    "browserify": {
-        "transform": [
-            "browserify-shim"
-        ]
-    },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/MasDennis/masdennis.github.com/issues"
+  },
+  "homepage": "https://github.com/MasDennis/masdennis.github.com",
+  "browser": {
+    "jquery": "./src/js/vendor/jquery-2.1.1.min.js"
+  },
+  "browserify-shim": {},
+  "browserify": {
+    "transform": [
+      "browserify-shim"
+    ]
+  },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-connect": "^0.8.0",
@@ -49,6 +46,7 @@
     "browserify": "~4.2.0",
     "browserify-shim": "~3.6.0",
     "watchify": "~0.10.2",
-    "grunt-browserify": "~2.1.3"
+    "grunt-browserify": "~2.1.3",
+    "highlight.js": "^8.1.0"
   }
 }
