--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-connect": "^0.8.0",
-    "assemble": "^0.4.40",
     "grunt-autoprefixer": "^0.8.1",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-clean": "^0.5.0",
@@ -47,6 +46,7 @@
     "browserify-shim": "~3.6.0",
     "watchify": "~0.10.2",
     "grunt-browserify": "~2.1.3",
-    "highlight.js": "^8.1.0"
+    "highlight.js": "^8.1.0",
+    "assemble": "^0.4.41"
   }
 }
